--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "src/",
     "samples/"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "browserfs": "^1.4.3"
+  },
   "devDependencies": {
-    "typescript": "1.8.0"
+    "typescript": "^2.5.0"
   },
   "scripts": {
     "prepublish": "npm run build",
     "build": "npm run buildts && npm run buildcss",
-    "buildts": "node_modules/typescript/bin/tsc -d  --target es6 --sourceMap --outFile dist/emloader.js src/emloader/Emloader.ts",
+    "buildts": "node_modules/typescript/bin/tsc -d  --target es6 --sourceMap --outFile dist/emloader.js src/main.ts",
     "buildcss": "cp src/emloader/plugins/plugins.css dist/emloader-plugins.css"
   }
 }
